@@ -1,3 +1,6 @@
+2012-01-07
+ * rts2-grbd's --create-disabled option
+
 2012-01-06
  * added proper motion
 
